# glpk.js

./: .dockerignore  .gitignore  .gitmodules  .npmignore  AUTHORS.md  Dockerfile  Makefile  README.md  TODO  build.sh  glpk-worker.js  glpk-worker.wasm  glpk.d.ts  glpk.js  glpk.js.c  glpk.wasm  package-lock.json  package.json  post.js  pre.js  rollup.config.js  test.js
.github/workflows/: ci.yml
cson/: cson_amalgamation_core.c  cson_amalgamation_core.h
example/: lp.html  lp.js
examples/: lp-large.html  lp-large.js  lp.html  lp.js
glpk-4.53/: configure
glpk-4.53/w32/: Makefile_VC  Makefile_VC_DLL
glpk-4.55/: ChangeLog  NEWS  README  THANKS  configure  configure.ac
glpk-4.55/doc/: glpk.tex  glpk02.tex  glpk06.tex
glpk-4.55/examples/: INDEX  alloy.mps  furnace.mps
glpk-4.55/src/: Makefile.am  Makefile.in  bfd.c  glpapi06.c  glpapi09.c  glpapi21.c  glpk.h  glpspx01.c  glpspx02.c  glptsp.c  prob.h
glpk-4.55/src/bflib/: btf.c  btf.h  btfint.c  btfint.h  fhvint.c  fhvint.h  luf.c  luf.h  lufint.c  scf.c  scf.h  scfint.c  scfint.h  sgf.c  sva.c
glpk-4.55/src/env/: stream.c
glpk-4.55/w32/: Makefile_VC_DLL
glpk-4.55/w64/: glpk_4_55.def  makefile_VC
glpk-4.57/: Makefile  config.h  config.status  libtool
glpk-4.57/examples/: Makefile  glpsol
glpk-4.57/src/: Makefile
glpk-4.57/w32/: Makefile_VC  Makefile_VC_DLL  glpk_4_57.def
glpk-4.60/: ChangeLog  NEWS  README  THANKS  configure  configure.ac
glpk-4.60/doc/: glpk.tex  glpk02.tex
glpk-4.60/examples/: glpsol.c
glpk-4.60/src/: Makefile.am  Makefile.in  glpapi06.c  glpapi07.c  glpapi09.c  glpios.h  glpios01.c  glpios03.c  glpios10.c  glpk.h  prob.h  spv.c  spv.h
glpk-4.60/src/api/: ckcnf.c  cplex.c  cpxbas.c  intfeas1.c  mcfrelax.c  minisat1.c  mps.c  prrngs.c  rdcnf.c  rdipt.c  rdmip.c  rdprob.c  rdsol.c  wrcnf.c  wript.c  wrmip.c  wrprob.c  wrsol.c
glpk-4.60/src/bflib/: fvs.c  fvs.h
glpk-4.60/src/cglib/: gmigen.c  mirgen.c
glpk-4.60/src/env/: env.c  env.h
glpk-4.60/src/mpl/: mpl5.c  mpl6.c  mplsql.c
glpk-4.60/src/proxy/: proxy1.c
glpk-4.60/src/simplex/: spxlp.c  spxnt.h  spxprim.c  spychuzc.c  spydual.c
glpk-4.60/w32/: Makefile_VC  Makefile_VC_DLL
glpk-4.60/w64/: config_VC  glpk_4_60.def
src/: glpk-async.d.ts  glpk-node.d.ts  glpk-node.js  glpk-shared.d.ts  glpk-sync.d.ts  glpk-web.d.ts  glpk-web.js  glpk-worker.js  glpk.d.ts  glpk.js  glpk.js.c  index.d.ts  pack.js  post-worker.js  post.js  pre.js
test/: bin.js  int.js  lp.js  mem-test.js  mem.html  mem.js  test.js  write.js
test/data/: diet_large.json  diet_large.lp  lp.json  lp.lp  mem.json  mip.json  mip.lp  mip2.json  mip2.lp
test/data/netlib/: 25FV47.SIF  AGG.SIF  BLEND.SIF
