## Process this file with automake to produce Makefile.in ##

include_HEADERS = glpk.h

lib_LTLIBRARIES = libglpk.la

libglpk_la_CPPFLAGS = \
-I$(srcdir) \
-I$(srcdir)/amd \
-I$(srcdir)/api \
-I$(srcdir)/bflib \
-I$(srcdir)/cglib \
-I$(srcdir)/colamd \
-I$(srcdir)/env \
-I$(srcdir)/minisat \
-I$(srcdir)/misc \
-I$(srcdir)/mpl \
-I$(srcdir)/proxy \
-I$(srcdir)/simplex \
-I$(srcdir)/zlib

libglpk_la_LDFLAGS = \
-version-info 41:0:1 \
-export-symbols-regex '^glp_*' \
${NOUNDEFINED}

libglpk_la_SOURCES = \
bfd.c \
bfx.c \
glpapi01.c \
glpapi02.c \
glpapi03.c \
glpapi04.c \
glpapi05.c \
glpapi06.c \
glpapi07.c \
glpapi08.c \
glpapi09.c \
glpapi10.c \
glpapi12.c \
glpapi13.c \
glphbm.c \
glpios01.c \
glpios02.c \
glpios03.c \
glpios07.c \
glpios09.c \
glpios10.c \
glpios11.c \
glpios12.c \
glpipm.c \
glpmat.c \
glpnpp01.c \
glpnpp02.c \
glpnpp03.c \
glpnpp04.c \
glpnpp05.c \
glpnpp06.c \
glprgr.c \
glpscl.c \
glpspm.c \
glpssx01.c \
glpssx02.c \
lux.c \
spv.c \
amd/amd_1.c \
amd/amd_2.c \
amd/amd_aat.c \
amd/amd_control.c \
amd/amd_defaults.c \
amd/amd_dump.c \
amd/amd_info.c \
amd/amd_order.c \
amd/amd_post_tree.c \
amd/amd_postorder.c \
amd/amd_preprocess.c \
amd/amd_valid.c \
api/advbas.c \
api/asnhall.c \
api/asnlp.c \
api/asnokalg.c \
api/ckasn.c \
api/ckcnf.c \
api/cplex.c \
api/cpp.c \
api/cpxbas.c \
api/graph.c \
api/gridgen.c \
api/intfeas1.c \
api/maxffalg.c \
api/maxflp.c \
api/mcflp.c \
api/mcfokalg.c \
api/mcfrelax.c \
api/minisat1.c \
api/mpl.c \
api/mps.c \
api/netgen.c \
api/pript.c \
api/prmip.c \
api/prrngs.c \
api/prsol.c \
api/rdasn.c \
api/rdcc.c \
api/rdcnf.c \
api/rdipt.c \
api/rdmaxf.c \
api/rdmcf.c \
api/rdmip.c \
api/rdprob.c \
api/rdsol.c \
api/rmfgen.c \
api/strong.c \
api/topsort.c \
api/weak.c \
api/wcliqex.c \
api/wrasn.c \
api/wrcc.c \
api/wrcnf.c \
api/wript.c \
api/wrmaxf.c \
api/wrmcf.c \
api/wrmip.c \
api/wrprob.c \
api/wrsol.c \
bflib/btf.c \
bflib/btfint.c \
bflib/fhv.c \
bflib/fhvint.c \
bflib/fvs.c \
bflib/ifu.c \
bflib/luf.c \
bflib/lufint.c \
bflib/scf.c \
bflib/scfint.c \
bflib/sgf.c \
bflib/sva.c \
cglib/cfg.c \
cglib/cfg1.c \
cglib/cfg2.c \
cglib/clqcut.c \
cglib/gmicut.c \
cglib/gmigen.c \
cglib/mirgen.c \
colamd/colamd.c \
env/alloc.c \
env/dlsup.c \
env/env.c \
env/error.c \
env/stdout.c \
env/stream.c \
env/time.c \
env/tls.c \
minisat/minisat.c \
misc/avl.c \
misc/bignum.c \
misc/dimacs.c \
misc/dmp.c \
misc/ffalg.c \
misc/fp2rat.c \
misc/gcd.c \
misc/jd.c \
misc/keller.c \
misc/mc13d.c \
misc/mc21a.c \
misc/mygmp.c \
misc/okalg.c \
misc/qmd.c \
misc/relax4.c \
misc/rng.c \
misc/rng1.c \
misc/round2n.c \
misc/str2int.c \
misc/str2num.c \
misc/strspx.c \
misc/strtrim.c \
misc/triang.c \
misc/wclique.c \
misc/wclique1.c \
mpl/mpl1.c \
mpl/mpl2.c \
mpl/mpl3.c \
mpl/mpl4.c \
mpl/mpl5.c \
mpl/mpl6.c \
mpl/mplsql.c \
proxy/proxy.c \
proxy/proxy1.c \
simplex/spxat.c \
simplex/spxchuzc.c \
simplex/spxchuzr.c \
simplex/spxlp.c \
simplex/spxnt.c \
simplex/spxprim.c \
simplex/spxprob.c \
simplex/spychuzc.c \
simplex/spychuzr.c \
simplex/spydual.c \
zlib/adler32.c \
zlib/compress.c \
zlib/crc32.c \
zlib/deflate.c \
zlib/gzclose.c \
zlib/gzlib.c \
zlib/gzread.c \
zlib/gzwrite.c \
zlib/inffast.c \
zlib/inflate.c \
zlib/inftrees.c \
zlib/trees.c \
zlib/uncompr.c \
zlib/zio.c \
zlib/zutil.c

## eof ##
